--- a/css/cajas.css
+++ b/css/cajas.css
@@ -1,10 +1,27 @@
 #contenedor{
     display:grid;
-    grid-template-columns: 25% auto auto 10%;
+    grid-template-columns: 25% auto 10%;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
 }
 
 #contenedor div{
-    border: 1px solid black;
+    border: 1px solid red;
     background-color: black;
     color: white;
+    padding: 30px;
+}
+
+#item-1{
+    background-color: blue;
+    grid-column: 1 / span 3;
+}
+
+#item-2{
+    grid-row: 1 / 4;
+}
+
+#item-4{
+    grid-column-start: 1;
+    grid-column: 5;
 }
